methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:38: error: type mismatch;
 found   : Unit
 required: Boolean
 prendBiscuit()
             ^