methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {


    if (estFaceMur()==true)
    {
      return false
    }
    avance()

    if (getCouleurSol()==Color.green){
      recule()
      avance()
      return true
    }
    else {
      right()
      avance()
      if (getCouleurSol()==Color.green){
        recule()
        avance()
      }
      else {
        gauche()
        gauche()
        avance()

      }


      return true
    }



  

 prendBiscuit()
}